[metadata]
name = wdapy
author = "codeskyblue"
summary = Python Client for Facebook WebDriverAgent
license = MIT
home-page = https://github.com/openatx/wdapy
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	wdapy
